--- a/src/app/components/addlands/addlands.component.html
+++ b/src/app/components/addlands/addlands.component.html
@@ -616,7 +616,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-12  ">
-                            <h3><i class="fas fa-file-alt"></i> ข้อมูลติดต่อ</h3>
+                            <h3><i class="fas fa-file-alt"></i> ข้อมูลติด</h3>
                             <ul class="nav nav-tabs" id="myTab" role="tablist">
                                 <li class="nav-item">
                                     <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab"
