--- a/src/app/components/houses/houses-detail/houses-detail.component.css
+++ b/src/app/components/houses/houses-detail/houses-detail.component.css
@@ -2,7 +2,21 @@
 input.ng-invalid.ng-touched {
     border: solid 1px red;
 }
-
+kendo-pdf-export {
+  font-family: "DejaVu Sans", "Arial", sans-serif;
+  font-size: 12px;
+}
+.img{      
+  margin:6px 6px;      
+  border: 4px solid #eee;      
+  box-shadow:rgb(224, 199, 199) 1px 1px 8px 1px;      
+  cursor: pointer      
+     }      
+ .modal-content {      
+   width: 1000px !important;      
+ }      
+ ul { padding:0; width:1200px; margin:20px auto;margin-left: 80px}      
+ li { display:inline;}  
 hr {
   width: 1000px;
 }
