--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
   <div class= "page-content">
-    <img src="https://i.imgur.com/q3F1dTW.jpg" alt="index.png" width="1519px">
+    <img src="https://i.imgur.com/q3F1dTW.jpg" alt="index.png" >
   </div>
 
 
