validate login, fix upimg

--- a/src/app/components/addhouse/addhouse.component.html
+++ b/src/app/components/addhouse/addhouse.component.html
@@ -1,8 +1,7 @@
 <app-navbar></app-navbar>
-<div class="page-content">
-    <img src="../../../assets/Property.jpg" alt="index.png" width="1519px">
-</div>
-<div class="container ">
+<img src="../../../assets/Property.jpg" class="img-fluid" alt="Responsive image"
+  style="width:100%;">
+<div class="container " style="width:100%;">
     <div id="product-container">
 
         <div class="row">
