--- a/src/app/components/addlands/addlands.component.html
+++ b/src/app/components/addlands/addlands.component.html
@@ -277,7 +277,7 @@
                                                     <input style="border-radius: 30px 30px 30px 30px;" type="text"
                                                         id="CodeDeed" class="form-control search-input" name="CodeDeed"
                                                         placeholder="รหัสทรัพย์สิน(จากธนาคาร หรือ กรมที่ดิน)" required
-                                                        [(ngModel)]="credentials.CodeProp">
+                                                        [(ngModel)]="credentials.CodeProperty">
                                                 </div>
                                             </div>
                                         </div>
@@ -688,7 +688,7 @@
                                                                     type="text" id="ContactP"
                                                                     class="form-control search-input" name="ContactP"
                                                                     placeholder="" required
-                                                                    [(ngModel)]="credentials.ContactP">
+                                                                    >
                                                             </div>
                                                         </div>
                                                     </div>
@@ -706,7 +706,7 @@
                                                                     type="text" id="ContactE"
                                                                     class="form-control search-input" name="ContactE"
                                                                     placeholder="" required
-                                                                    [(ngModel)]="credentials.ContactE">
+                                                                    >
                                                             </div>
                                                         </div>
                                                     </div>
@@ -724,7 +724,7 @@
                                                                     type="text" id="ContactL"
                                                                     class="form-control search-input" name="ContactL"
                                                                     placeholder="" required
-                                                                    [(ngModel)]="credentials.ContactL">
+                                                                   >
                                                             </div>
                                                         </div>
                                                     </div>
@@ -792,7 +792,7 @@
                                                                 type="text" id="ContactPo"
                                                                 class="form-control search-input" name="ContactPo"
                                                                 placeholder="" required
-                                                                [(ngModel)]="credentials.ContactPo">
+                                                               >
                                                         </div>
                                                     </div>
                                                 </div>
@@ -810,7 +810,7 @@
                                                                 type="text" id="ContactEo"
                                                                 class="form-control search-input" name="ContactEo"
                                                                 placeholder="" required
-                                                                [(ngModel)]="credentials.ContactEo">
+                                                                >
                                                         </div>
                                                     </div>
                                                 </div>
@@ -828,7 +828,7 @@
                                                                 type="text" id="ContactLo"
                                                                 class="form-control search-input" name="ContactLo"
                                                                 placeholder="" required
-                                                                [(ngModel)]="credentials.ContactLo">
+                                                                >
                                                         </div>
                                                     </div>
                                                 </div>
@@ -894,7 +894,7 @@
                                                                 type="text" id="ContactPth"
                                                                 class="form-control search-input" name="ContactPt"
                                                                 placeholder="" required
-                                                                [(ngModel)]="credentials.ContactPt">
+                                                                >
                                                         </div>
                                                     </div>
                                                 </div>
@@ -912,7 +912,7 @@
                                                                 type="text" id="ContactEt"
                                                                 class="form-control search-input" name="ContactEt"
                                                                 placeholder="" required
-                                                                [(ngModel)]="credentials.ContactEt">
+                                                                >
                                                         </div>
                                                     </div>
                                                 </div>
@@ -930,7 +930,7 @@
                                                                 type="text" id="ContactLt"
                                                                 class="form-control search-input" name="ContactLt"
                                                                 placeholder="" required
-                                                                [(ngModel)]="credentials.ContactLt">
+                                                                >
                                                         </div>
                                                     </div>
                                                 </div>
