--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -1,7 +1,5 @@
 <app-navbar></app-navbar>
-  <div class= "page-content">
-    <img src="https://i.imgur.com/q3F1dTW.jpg" alt="index.png" >
-  </div>
+    <img src="https://i.imgur.com/q3F1dTW.jpg" alt="index.png"   style="width:100%;" class="img-fluid">
 
 
 <app-footer></app-footer>      
