--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-8 jumbotron col-12 col-md-6" style="height: 650px;">
-      <div class="text-center  " style="margin: 100px">
+    <div class="col-md-8 jumbotron col-12 col-md-6" style="height: 650%;">
+      <div class="text-center  " style="margin: 20%">
         <h1>WELCOME</h1>
         <p class="font-weight-light  ">
           Search for new housing estates all over Bangkok, suburbs and provinces
