--- a/src/app/components/houses/houses-detail/houses-detail.component.html
+++ b/src/app/components/houses/houses-detail/houses-detail.component.html
@@ -49,50 +49,7 @@
             </div>
           </kendo-pdf-export>
         </div>
-        <div class="card">
-          <div class="card-body">
-            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img class="card-img-top"
-                    src="https://sf.pruksa.com/cache/subdomain/passorn/images/PS79_363x227__363x227.jpg"
-                    style="width:50%;" alt="First slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="card-img-top"
-                    src="https://sf.pruksa.com/cache/subdomain/passorn/images/PS79_363x227__363x227.jpg"
-                    style="width:50%;" alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="card-img-top"
-                    src="https://sf.pruksa.com/cache/subdomain/passorn/images/PS79_363x227__363x227.jpg"
-                    style="width:50%;" alt="Third slide">
-                </div>
-              </div>
-              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
-
-
-            </div>
-
-
-          </div>
-        </div>
-        <ngx-image-gallery 
-        [images]="images" 
-        [conf]="conf"
-        (onOpen)="galleryOpened($event)"
-        (onClose)="galleryClosed()"
-        (onImageClicked)="galleryImageClicked($event)"
-        (onImageChange)="galleryImageChanged($event)"
-        (onDelete)="deleteImage($event)"
-        ></ngx-image-gallery>
+        <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
         
         <div class="row">
           <ul>
