--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -25,9 +25,9 @@
                     เพิ่มอสังหาริมทรัพย์
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="addhouse"><i class="fa fa-home font-color-orange "  aria-hidden="true"></i> บ้าน</a>
+                    <a class="dropdown-item" routerLink="/addhouse"><i class="fa fa-home font-color-orange "  aria-hidden="true"></i> บ้าน</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="addlands"><i class="fa fa-tree font-color-green" aria-hidden="true"></i> ที่ดิน</a>
+                    <a class="dropdown-item" routerLink="/addlands"><i class="fa fa-tree font-color-green" aria-hidden="true"></i> ที่ดิน</a>
                    
                    
                   </div>
