--- a/src/app/components/houses/houseslist/houseslist.component.html
+++ b/src/app/components/houses/houseslist/houseslist.component.html
@@ -201,164 +201,7 @@
                       </div>
                       <!---->
                     </ul>
-                  </div>
-                  <div class="filter-box">
-                    <div data-toggle="collapse" data-target="#filter-display" aria-controls="filter-display"
-                      class="header">
-                      ....
-                    </div>
-                    <ul id="filter-display" class="filter-item collapse">
-                      <li>
-                        <hr>
-                      </li>
-                      <!---->
-                      <div id="more-filter-display" class="">
-                        <li><a href="https://notebookspec.com/notebook/searchV4/?display=%3C13.3"><label><input
-                                type="checkbox" value="&lt;13.3">
-                                ....
-                              <span>(32)</span></label></a></li>
-                        <li><a href="https://notebookspec.com/notebook/searchV4/?display=13.3"><label><input
-                                type="checkbox" value="13.3">
-                                ....
-                              <span>(96)</span></label></a></li>
-                        <li><a href="https://notebookspec.com/notebook/searchV4/?display=14"><label><input
-                                type="checkbox" value="14">
-                                ....
-                              <span>(270)</span></label></a></li>
-                        <li><a href="https://notebookspec.com/notebook/searchV4/?display=15.6"><label><input
-                                type="checkbox" value="15.6">
-                                ....
-                              <span>(444)</span></label></a></li>
-                        <li><a href="https://notebookspec.com/notebook/searchV4/?display=17.3"><label><input
-                                type="checkbox" value="17.3">
-                                ....
-                              <span>(56)</span></label></a></li>
-                        <li><a href="https://notebookspec.com/notebook/searchV4/?display=%3E17.3"><label><input
-                                type="checkbox" value="&gt;17.3">
-                                ....
-                              <!----></label></a></li>
-                      </div>
-                      <!---->
-                    </ul>
-                  </div>
-                  <div class="filter-box">
-                    <div data-toggle="collapse" data-target="#filter-panel" aria-controls="filter-panel" class="header">
-                      ....
-                    </div>
-                    <ul id="filter-panel" class="filter-item collapse">
-                      <li>
-                        <hr>
-                      </li>
-                      <!---->
-                      <div id="more-filter-panel" class="">
-                        <li><a href="https://notebookspec.com/notebook/searchV4/?panel=N%2FA"><label><input
-                                type="checkbox" value="N/A">
-                                ....
-                              <span>(621)</span></label></a></li>
-                        <li><a href="https://notebookspec.com/notebook/searchV4/?panel=IPS"><label><input
-                                type="checkbox" value="IPS">
-                                ....
-                              <span>(193)</span></label></a></li>
-                        <li><a href="https://notebookspec.com/notebook/searchV4/?panel=TN"><label><input type="checkbox"
-                                value="TN">
-                                ....
-                              <span>(103)</span></label></a></li>
-                      </div>
-                      <!---->
-                    </ul>
-                  </div>
-                  <div class="filter-box">
-                    <div data-toggle="collapse" data-target="#filter-weight" aria-controls="filter-weight"
-                      class="header">
-                      ....
-                    </div>
-                    <ul id="filter-weight" class="filter-item collapse">
-                      <li>
-                        <hr>
-                      </li>
-                      <!---->
-                      <div id="more-filter-weight" class="">
-                        <li><a href="https://notebookspec.com/notebook/searchV4/?weight=%3C1.5"><label><input
-                                type="checkbox" value="&lt;1.5">
-                                ....
-                              <span>(233)</span></label></a></li>
-                        <li><a href="https://notebookspec.com/notebook/searchV4/?weight=1.5-2.0"><label><input
-                                type="checkbox" value="1.5-2.0">
-                                ....
-                              <span>(303)</span></label></a></li>
-                        <li><a href="https://notebookspec.com/notebook/searchV4/?weight=2.0-2.5"><label><input
-                                type="checkbox" value="2.0-2.5">
-                                ....
-                              <span>(309)</span></label></a></li>
-                        <li><a href="https://notebookspec.com/notebook/searchV4/?weight=2.5-3.0"><label><input
-                                type="checkbox" value="2.5-3.0">
-                                ....
-                              <span>(73)</span></label></a></li>
-                        <li><a href="https://notebookspec.com/notebook/searchV4/?weight=%3E3.0"><label><input
-                                type="checkbox" value="&gt;3.0">
-                                ....
-                              <span>(25)</span></label></a></li>
-                      </div>
-                      <!---->
-                    </ul>
-                  </div>
-                  <div class="filter-box">
-                    <div data-toggle="collapse" data-target="#filter-os" aria-controls="filter-os" class="header">
-                      ....
-                    </div>
-                    <ul id="filter-os" class="filter-item collapse">
-                      <li>
-                        <hr>
-                      </li>
-                      <!---->
-                      <div id="more-filter-os" class="">
-                        <li><a
-                            href="https://notebookspec.com/notebook/searchV4/?os=Windows+10+Home+%2864+Bit%29"><label><input
-                                type="checkbox" value="Windows 10 Home (64 Bit)">
-                                ....
-                              <span>(630)</span></label></a></li>
-                        <li><a href="https://notebookspec.com/notebook/searchV4/?os=Windows+10"><label><input
-                                type="checkbox" value="Windows 10">
-                                ....
-                              <span>(102)</span></label></a></li>
-                        <li><a
-                            href="https://notebookspec.com/notebook/searchV4/?os=Windows+10+Pro+64+%2864+Bit%29"><label><input
-                                type="checkbox" value="Windows 10 Pro 64 (64 Bit)">
-                                ....
-                              <span>(40)</span></label></a></li>
-                        <li><a href="https://notebookspec.com/notebook/searchV4/?os=DOS+Operating+System"><label><input
-                                type="checkbox" value="DOS Operating System">
-                                ....
-                              <span>(36)</span></label></a></li>
-                        <li><a href="https://notebookspec.com/notebook/searchV4/?os=Ubuntu"><label><input
-                                type="checkbox" value="Ubuntu">
-                                ....
-                              <span>(36)</span></label></a></li>
-                        <li><a href="https://notebookspec.com/notebook/searchV4/?os=Linpus+Linux"><label><input
-                                type="checkbox" value="Linpus Linux">
-                                ....
-                              <span>(33)</span></label></a></li>
-                        <li><a
-                            href="https://notebookspec.com/notebook/searchV4/?os=Windows+10+Home+Single+Language+%2864+Bit%29"><label><input
-                                type="checkbox" value="Windows 10 Home Single Language (64 Bit)">
-                                ....
-                              <span>(23)</span></label></a></li>
-                        <li><a href="https://notebookspec.com/notebook/searchV4/?os=macOS"><label><input type="checkbox"
-                                value="macOS">
-                                ....
-                              <span>(11)</span></label></a></li>
-                        <li><a href="https://notebookspec.com/notebook/searchV4/?os=macOS+Sierra"><label><input
-                                type="checkbox" value="macOS Sierra">
-                                ....
-                              <span>(5)</span></label></a></li>
-                        <li><a href="https://notebookspec.com/notebook/searchV4/?os=Endless+OS"><label><input
-                                type="checkbox" value="Endless OS">
-                                ....
-                              <span>(1)</span></label></a></li>
-                      </div>
-                      <!---->
-                    </ul>
-                  </div>
+                  </div>                            
                 </div>
                 <div id="modal-bg"></div>
                 <div id="search-result">
@@ -401,9 +244,10 @@
                           </a>
                           <div class=""><a [routerLink]="['/houses',houses.ID_Property]"
                               [queryParams]="{page: activePage}"><img
-                                src="https://i3.au.reastatic.net/640x480/41c56741172108bff15ae806af966a97646e62acb6846c706182e1e427160742/main.jpg"
-                                class="img-responsive notebook-img"></a>
+                                src="http://www.landvist.xyz/images/{{houses.ImageEX}}"
+                                class="img-responsive notebook-img rounded"></a>
                             <!---->
+                            <hr>
                             <ul class="specification">
                               <li></li>
                               <li>{{houses.PropertyType}}</li>
