--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -17,7 +17,7 @@
       <div class="col-xs-12- col-sm-6 col-md-12 ">
         <header class="text-center">
           <img
-            src="https://scontent.fcnx1-1.fna.fbcdn.net/v/t1.15752-9/59273882_593418344511413_1414149515857887232_n.png?_nc_cat=106&_nc_ht=scontent.fcnx1-1.fna&oh=94fdf0248350650f1172181dc1bef123&oe=5D6C78E0"
+            src="http://www.landvist.xyz/images/Defult/Defult.png"
             width="300" height="250" alt="">
           <h3>ลงชื่อเข้าใช้งาน</h3>
           <div>ใช้บัญชี PropertyMB ของคุณ</div>
