--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -7,7 +7,7 @@
     <table class="table col-md-6 mx-auto">
 
         <div class="container" >
-           <img class="card-img-top " src="http://165.22.247.44/images/{{ details?.ProfileImg }}" style="width:50%;position: absolute; left: -55%; bottom: 40%; border-radius: 100% ">
+           <img class="card-img-top " src="http://www.landvist.xyz/images/{{ details?.ProfileImg }}" style="width:50%;position: absolute; left: -55%; bottom: 40%; border-radius: 100% ">
            <br><br><br><br>
           </div>
 
@@ -28,7 +28,7 @@
      
       <tr>
         <td>อสังหาริมทรัพย์ทั้งหมด:</td>
-        <td>{{ details?.Email }}</td>
+        <td></td>
       </tr>
 
       <tr>
@@ -38,7 +38,7 @@
 
       <tr>
         <td>เบอร์โทรติดต่อ :</td>
-        <td>{{ details?.Created| timeAgoThai }}</td>
+        <td></td>
       </tr>
 
     </table>
