--- a/src/app/components/group/group.component.html
+++ b/src/app/components/group/group.component.html
@@ -1,16 +1,2 @@
-<app-navbar></app-navbar>
 
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <div class="text-center ">
-                <div class="text-center jumbotron">
-                    
-                   
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<app-commingsoon></app-commingsoon>
