--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -48,16 +48,16 @@
                 <a class="nav-link" routerLink="/profile" ><img src="{{ auth.getUserDetails()?.Profile1}}" alt=""><i class="fa fa-user-circle"></i></a>
               </li>
               <li *ngIf="auth.isLoggedIn()" class="nav-item active" >
-                <a class="nav-link" routerLink="/profile">{{ auth.getUserDetails()?.Firstname }}</a>
+                <a class="nav-link" routerLink="/profile">{{ auth.getUserDetails()?.Email }}</a>
               </li>
               <li *ngIf="auth.isLoggedIn()" class="nav-item">
-                <a class="nav-link" routerLink="" (click)="auth.logout()">Logout</a>
+                <a class="nav-link" routerLink="" (click)="auth.logout()">ลงชื่อออก</a>
               </li>
                 <li *ngIf="!auth.isLoggedIn()" class="nav-item">
-                <a class="nav-link" routerLink="/login">Login</a>
+                <a class="nav-link" routerLink="/login">ลงชื่อเข้าใช้งาน</a>
               </li>
               <li *ngIf="!auth.isLoggedIn()" class="nav-item">
-                <a class="nav-link" routerLink="/register">Register</a>
+                <a class="nav-link" routerLink="/register">สมัคสมาชิก</a>
               </li>
               
             </ul>
