--- a/src/app/lib/pagenotfound/pagenotfound.component.html
+++ b/src/app/lib/pagenotfound/pagenotfound.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
+
 <div id="notfound">
   <div class="text-center">
       <img  src="https://scontent.fcnx1-1.fna.fbcdn.net/v/t1.15752-9/59273882_593418344511413_1414149515857887232_n.png?_nc_cat=106&_nc_ht=scontent.fcnx1-1.fna&oh=94fdf0248350650f1172181dc1bef123&oe=5D6C78E0"
