--- a/src/app/components/addhouse/addhouse.component.html
+++ b/src/app/components/addhouse/addhouse.component.html
@@ -1933,16 +1933,17 @@
                                                                         <select
                                                                             style="border-radius: 30px 30px 30px 30px;"
                                                                             id="LProvince" class="form-control"
-                                                                            name="LProvince" required
-                                                                            [(ngModel)]="credentials.LProvince "
-                                                                            (change)="selectprovince($event.target.value)">
+                                                                            name="LProvince" required [(ngModel)]="LProvince"
+                                                                            (ngModelChange)="selectprovince($event)">
                                                                             <option>- จังหวัด -</option>
                                                                             <option *ngFor="let p of province"
-                                                                                value="{{p.PROVINCE_ID}}">
+                                                                            [ngValue]="p">
                                                                                 {{p.PROVINCE_NAME}}
                                                                             </option>
 
                                                                         </select>
+
+                                                                        
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -1956,12 +1957,12 @@
                                                                             style="border-radius: 30px 30px 30px 30px;"
                                                                             id="LAmphur" class="form-control"
                                                                             name="LAmphur" required
-                                                                            [(ngModel)]="credentials.LAmphur"
-                                                                            (change)="selectamphur($event.target.value)">
+                                                                            [(ngModel)]="LAmphur"
+                                                                            (ngModelChange)="selectamphur($event)">
                                                                             <option>- อำเภอ -</option>
-                                                                            <option *ngFor="let p of amphur"
-                                                                                value="{{p.AMPHUR_ID}}">
-                                                                                {{p.AMPHUR_NAME}}</option>
+                                                                            <option *ngFor="let a of amphur"
+                                                                            [ngValue]="a">
+                                                                                {{a.AMPHUR_NAME}}</option>
                                                                         </select>
                                                                     </div>
                                                                 </div>
@@ -1979,12 +1980,12 @@
                                                                             style="border-radius: 30px 30px 30px 30px;"
                                                                             id="LDistrict" class="form-control"
                                                                             name="LDistrict" required
-                                                                            [(ngModel)]="credentials.LDistrict"
-                                                                            (change)="selectdistrict($event.target.value)">
+                                                                            [(ngModel)]="LDistrict"
+                                                                            (ngModelChange)="selectdistrict($event)">
                                                                             <option >- ตำบล -</option>
-                                                                            <option *ngFor="let p of district"
-                                                                                value="{{p.DISTRICT_ID}}">
-                                                                                {{p.DISTRICT_NAME}}
+                                                                            <option *ngFor="let d of district"
+                                                                            [ngValue]="d">
+                                                                                {{d.DISTRICT_NAME}}
                                                                             </option>
                                                                         </select>
                                                                     </div>
@@ -1996,7 +1997,7 @@
                                                                         รหัสไปรษณี:
                                                                     </div>
                                                                     <div class="col-sm-8" *ngFor="let pp of zipcode">
-                                                                        <label for="">{{pp.ZIPCODE}}</label>
+                                                                              <input class="form-control" type="text" style="border-radius: 30px 30px 30px 30px;"  value="{{pp.ZIPCODE}}" readonly> 
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -2479,7 +2480,7 @@
                                                                 <div class="form-group col-md-4">
                                                                     <label for="inputEmail4">ชื่อผู้ติดต่อ</label>
                                                                     <input type="name" class="form-control"
-                                                                        placeholder="ชื่อผู้ติดต่อ" readonly
+                                                                        placeholder="ชื่อผู้ติดต่อ" value="{{item.Name}}" readonly
                                                                         style="border-radius: 30px 30px 30px 30px;">
                                                                 </div>
                                                                 <div class="form-group col-md-4">
@@ -2540,7 +2541,17 @@
                     <div class="col-md-12 ">
                         <div class="row ">
                             <div class="col-8 ">
-                                <button class="btn btn-primary float-right" type="submit" (click)="onFirststep()"
+                                <button class="btn btn-primary float-right" type="submit" (click)="onFirststep()" 
+                                    >
+                                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> บันทึก
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12 ">
+                        <div class="row ">
+                            <div class="col-8 ">
+                                <button class="btn btn-primary float-right" type="button" 
                                     awNextStep>
                                     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> ถัดไป
                                 </button>
